workspace: don't crash without outputs

BUG: 458892